--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Monocle</title>
-    <link rel="icon" type="image/x-icon" href="/public/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./public/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="/public/logo.png" />
+      <img src="./public/logo.png" />
       <h1>Monocle</h1>
     </div>
     <div class="hero">
@@ -35,7 +35,7 @@
       </div>
       <div>
         <div>
-          <img class="screenshot" src="/public/screenshot.png" />
+          <img class="screenshot" src="./public/screenshot.png" />
         </div>
       </div>
     </div>
