working on pricing

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="indented">✅ Todo List + ✏️ Daily Planner + 🕒 Pomodoro</p>
           <p>
             Define your priorities, slot them into your schedule, and use a
-            ✨magic✨ floating window to always keep an eye on your current
+            ✨magic ✨floating window to always keep an eye on your current
             focus.
           </p>
           <a href="#" class="button">Download for macOS --></a>
@@ -35,7 +35,59 @@
       </div>
       <div>
         <div>
-          <img class="screenshot" src="./public/screenshot.png" />
+          <img class="screenshot" src="./public/screenshot.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="pricing">
+      <div class="tier black">
+        <h2>Basic</h2>
+        <h3>No sign-up needed</h3>
+        <p class="price">$0</p>
+        <div class="features">
+          <h3>Core features, always free</h3>
+          <ul>
+            <li>Create & manage tasks</li>
+            <li>Plan daily schedules</li>
+            <li>Use magic floating window</li>
+            <li>Navigate with keyboard</li>
+          </ul>
+        </div>
+        <div class="button-wrapper">
+          <a class="button">Download for free</a>
+        </div>
+      </div>
+      <div class="tier yellow">
+        <h2>Pro</h2>
+        <h3>For increased productivity</h3>
+        <p class="price">$5<small>/mo</small></p>
+        <div class="features">
+          <h3>Everything in basic, and</h3>
+          <ul>
+            <li>Connect with Google Calendar</li>
+            <li>Sync from any device</li>
+            <li>Create & share templates</li>
+            <li>View analytics on time spent</li>
+          </ul>
+        </div>
+        <div class="button-wrapper">
+          <a class="button secondary">Start Free 14-Day Trial</a>
+        </div>
+      </div>
+      <div class="tier red">
+        <h2>Team</h2>
+        <h3>For being productive together</h3>
+        <p class="price">$10<small>/mo/person</small></p>
+        <div class="features">
+          <h3>Everything in pro, and</h3>
+          <ul>
+            <li>Share tasks/schedules with others</li>
+            <li>Collaborate in real-time</li>
+            <li>Advanced analytics for team leads</li>
+          </ul>
+        </div>
+        <div class="button-wrapper">
+          <a class="button secondary">Start Free 14-Day Trial</a>
         </div>
       </div>
     </div>
