--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="button">Download for free</a>
         </div>
       </div>
-      <div class="tier yellow">
+      <div class="tier yellow disabled">
         <h2>Pro</h2>
         <h3>For increased productivity</h3>
         <p class="price">$5<small>/mo</small></p>
@@ -74,7 +74,7 @@
           <a class="button secondary">Start Free 14-Day Trial</a>
         </div>
       </div>
-      <div class="tier red">
+      <div class="tier red disabled">
         <h2>Team</h2>
         <h3>For being productive together</h3>
         <p class="price">$10<small>/mo/person</small></p>
